Start Task Optimization & Player Caching